rush page updates: fixed colors, updated timeline, & fixed timeline bar on mobile

--- a/static/css/rush.css
+++ b/static/css/rush.css
@@ -9,7 +9,8 @@ RUSH PAGE
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 5fr;
-  background-color: #455d45;
+  /* background-color: #455d45; */
+  background-color: #1e2a5e;
 }
 
 #firstPic {
@@ -25,13 +26,15 @@ RUSH PAGE
   display: flex;
   align-items: center;
   padding: 80px 80px 80px 80px;
-  background-color: #455d45;
+  /* background-color: #455d45; */
+  background-color: #1e2a5e;
   flex-wrap: wrap;
   color: #ffffff; /* White text */
 }
 
 .rush-text-box {
-  background-color: #8f9788;
+  /* background-color: #8f9788; */
+  background-color: #8a91a5;
   padding: 30px 30px 30px 30px;
   margin-left: 120px;
   width: 40%;
@@ -48,7 +51,8 @@ RUSH PAGE
   font-size: 36px;
   width: 500px;
   color: #ffffff; /* White text */
-  text-shadow: 2px 2px #455d45;
+  text-shadow: 2px 2px #1e2a5e;
+  /* text-shadow: 2px 2px #455d45; */
 }
 
 .rush-text-box p {
@@ -63,7 +67,7 @@ RUSH PAGE
   margin-left: -250px;
   display: block;
   object-fit: cover;
-  border: 2px solid #8f9788;
+  border: 2px solid #8a91a5;
 }
 
 /*------------------------------------------------------
@@ -85,7 +89,7 @@ RUSH PAGE
 .application div {
   box-shadow: 0px 0px 15px rgb(127 137 161 / 30%);
   padding: 30px;
-  background-color: #8f9788;
+  background-color: #8a91a5;
   color: #ffffff; /* White text */
   display: flex;
   flex-direction: column;
@@ -140,7 +144,7 @@ RUSH PAGE
   top: -70px;
   width: 4px;
   height: 116.5%;
-  background: #8f9788;
+  background: #8a91a5;
 }
 
 .timeline-container {
@@ -154,7 +158,7 @@ RUSH PAGE
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: #8f9788;
+  background: #8a91a5;
 }
 
 .timeline i {
@@ -183,7 +187,8 @@ RUSH PAGE
 }
 
 .rush-container {
-  background-color: #455d45;
+  /* background-color: #455d45; */
+  background-color: #1e2a5e;
   justify-content: center;
   align-items: center;
   padding: 70px 0px 70px 0px;
@@ -192,7 +197,8 @@ RUSH PAGE
 /* Founders' Quotes */
 h1 {
   font-family: quasimoda-2, sans-serif;
-  color: #455d45;
+  /* color: #455d45; */
+  color: #1e2a5e;
   font-size: 40px;
   font-weight: 700;
   text-align: center;
@@ -216,7 +222,7 @@ h1 {
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
-  background-color: #8f9788;
+  background-color: #8a91a5;
   color: #ffffff;
   height: auto;
 }
@@ -240,7 +246,8 @@ h1 {
   box-shadow: 0px 0px 30px rgb(127 137 161 / 30%);
   padding: 20px;
   align-items: center;
-  background-color: #455d45;
+  /* background-color: #455d45; */
+  background-color: #1e2a5e;
 }
 
 /*------------------------------------------------------
@@ -286,7 +293,7 @@ h1 {
 
   .timeline::before {
     height: 110%;
-    z-index: -1;
+    z-index: 1;
   }
 }
 
